test/fail/optargs/optarg_invalid_boolean.lly
#[
SyntaxError: 'hello' is not a valid default value for a boolean.
    from optarg_invalid_boolean.lly:6
]#

define f(a: *boolean=hello) { }
